--- a/src/main/resources/scenarios/basic.properties
+++ b/src/main/resources/scenarios/basic.properties
@@ -11,3 +11,6 @@ picks.0.event = 3
 picks.0.food = 1
 picks.1.field = 1
 picks.2.field = 1
+squares.count = 5
+limit.hand.event = 3
+limit.hand.food = 10
