2020-12-05_playing_pile_helps

--- a/src/main/resources/scenarios/basic.properties
+++ b/src/main/resources/scenarios/basic.properties
@@ -14,3 +14,8 @@ picks.2.field = 1
 squares.count = 5
 limit.hand.event = 3
 limit.hand.food = 10
+pile.event.accepts = event
+pile.buy-field.accepts = food
+pile.buy-knight.accepts = food
+pile.square.own.accepts = knight
+pile.square.foe.accepts = knight , event-plague
