--- a/src/main/resources/scenarios/mini.properties
+++ b/src/main/resources/scenarios/mini.properties
@@ -13,3 +13,9 @@ picks.1.field = 1
 squares.count = 2
 limit.hand.event = 2
 limit.hand.food = 5
+pile.event.accepts = event
+pile.buy-field.accepts = food
+pile.buy-knight.accepts = food
+pile.square.own.accepts = knight
+pile.square.foe.accepts = knight , event-plague
+
