--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "typescript": "~3.8.3"
   },
   "scripts": {
