2020-12-08_grain_famers_and_hay

--- a/src/main/resources/scenarios/basic.properties
+++ b/src/main/resources/scenarios/basic.properties
@@ -17,5 +17,9 @@ limit.hand.food = 10
 pile.event.accepts = event
 pile.buy-field.accepts = food
 pile.buy-knight.accepts = food
-pile.square.own.accepts = knight
-pile.square.foe.accepts = knight , event-plague
+pile.square.own.accepts = knight,worker
+pile.square.foe.accepts = knight,event-plague
+pile.train.accepts = food,event
+cards.worker.farmer = 1
+cards.material.hay = 10
+train.worker.farmer = event-grain,food-f1
