2020-12-09_forest_lumberjacks_and_wood

--- a/src/main/resources/scenarios/basic.properties
+++ b/src/main/resources/scenarios/basic.properties
@@ -23,3 +23,6 @@ pile.train.accepts = food,event
 cards.worker.farmer = 1
 cards.material.hay = 10
 train.worker.farmer = event-grain,food-f1
+cards.worker.lumberjack = 1
+cards.material.wood = 10
+train.worker.lumberjack = event-forest,food-f1
