2020-12-10_sheep_shepherds_and_wool

--- a/src/main/resources/scenarios/basic.properties
+++ b/src/main/resources/scenarios/basic.properties
@@ -26,3 +26,6 @@ train.worker.farmer = event-grain,food-f1
 cards.worker.lumberjack = 1
 cards.material.wood = 10
 train.worker.lumberjack = event-forest,food-f1
+cards.worker.shepherd = 1
+cards.material.wool = 10
+train.worker.shepherd = event-sheep,food-f1
