--- a/src/main/resources/scenarios/basic.properties
+++ b/src/main/resources/scenarios/basic.properties
@@ -17,15 +17,19 @@ limit.hand.food = 10
 pile.event.accepts = event
 pile.buy-field.accepts = food
 pile.buy-knight.accepts = food
-pile.square.own.accepts = knight,worker
+pile.square.own.accepts = knight,worker,building
 pile.square.foe.accepts = knight,event-plague
 pile.train.accepts = food,event
-cards.worker.farmer = 1
+pile.build.accepts = material
 cards.material.hay = 10
-train.worker.farmer = event-grain,food-f1
-cards.worker.lumberjack = 1
 cards.material.wood = 10
-train.worker.lumberjack = event-forest,food-f1
-cards.worker.shepherd = 1
 cards.material.wool = 10
+cards.material.gold = 10
+cards.worker.farmer = 1
+cards.worker.lumberjack = 1
+cards.worker.shepherd = 1
+train.worker.farmer = event-grain,food-f1
+train.worker.lumberjack = event-forest,food-f1
 train.worker.shepherd = event-sheep,food-f1
+cards.building.city = 1
+build.building.city = material-hay,material-wood,material-wood,material-wool
