2020-12-12_mountain_and_fresh_air

--- a/src/main/resources/scenarios/basic.properties
+++ b/src/main/resources/scenarios/basic.properties
@@ -1,9 +1,11 @@
 cards.field.grain = 5
 cards.field.sheep = 3
 cards.field.forest = 4
+cards.field.mountain = 2
 cards.event.grain = 5
 cards.event.sheep = 5
 cards.event.forest = 5
+cards.event.mountain = 2
 cards.event.plague = 1
 cards.food.f1 = 99
 cards.knight.k1 = 99
