2020-12-12_beach_and_sun

--- a/src/main/resources/scenarios/basic.properties
+++ b/src/main/resources/scenarios/basic.properties
@@ -4,12 +4,14 @@ cards.field.sheep = 3
 cards.field.forest = 4
 cards.field.mountain = 2
 cards.field.hill = 2
+cards.field.beach = 2
 ## Events
 cards.event.grain = 5
 cards.event.sheep = 5
 cards.event.forest = 5
 cards.event.mountain = 2
 cards.event.hill = 2
+cards.event.beach = 2
 ## Special events
 cards.event.plague = 1
 ## Other cards
