--- a/src/main/resources/scenarios/basic.properties
+++ b/src/main/resources/scenarios/basic.properties
@@ -35,7 +35,7 @@ limit.hand.food = 10
 pile.event.accepts = event
 pile.buy-field.accepts = food
 pile.buy-knight.accepts = food
-pile.train.accepts = food,event
+pile.train.accepts = food,event,material
 pile.build.accepts = material
 ### ...including own and opponent squares
 pile.square.own.accepts = knight,worker,building
@@ -53,13 +53,17 @@ cards.material.gold = 10
 cards.worker.farmer = 1
 cards.worker.lumberjack = 1
 cards.worker.shepherd = 1
+cards.worker.mayor = 1
 ## Training costs
 train.worker.farmer = event-grain,food-f1
 train.worker.lumberjack = event-forest,food-f1
 train.worker.shepherd = event-sheep,food-f1
+train.worker.mayor = material-hay,material-wool
 
 ## BUILDINGS
 ## Building cards
 cards.building.city = 1
+cards.building.townhall = 1
 ## Building costs
 build.building.city = material-hay,material-wood,material-wood,material-wool
+build.building.townhall = material-hay,material-wood
