2020-12-17_functionalitat_3: The deal event

--- a/src/main/resources/scenarios/basic.properties
+++ b/src/main/resources/scenarios/basic.properties
@@ -12,6 +12,7 @@ cards.event.forest = 5
 cards.event.mountain = 2
 cards.event.hill = 2
 cards.event.beach = 2
+cards.event.deal = 1
 ## Special events
 cards.event.plague = 1
 ## Other cards
