EcsRefactor: Adds Loadable Component

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.gson.pretty-printing=true
 spring.gson.serialize-nulls=true
 # // https://techblogstation.com/spring-boot/gson-with-spring-boot/
 # // https://howtodoinjava.com/spring-boot2/gson-with-spring-boot/
-spring.http.converters.preferred-json-mapper=gson
+#spring.http.converters.preferred-json-mapper=gson
 
 ###
 #   Database Settings
